test/compile-fail/identifier/use-as-path-segment-keyword/top.rhdl
mod a {}
use a as r#self;
